--- a/overlay/packages/inputmethods/LatinIME/java/res/values-mdpi/dimens.xml
+++ b/overlay/packages/inputmethods/LatinIME/java/res/values-mdpi/dimens.xml
@@ -19,12 +19,6 @@
 -->
 
 <resources>
-    <!-- keyboardHeight = row_height*4 + key_bottom_gap*3 -->
-    <dimen name="keyboardHeight">21.75mm</dimen>
-    <fraction name="minKeyboardHeight">-55.8%p</fraction>
-
-    <dimen name="popup_key_height">5.58mm</dimen>
-
-    <!-- keyboardHeight = row_height*4 + key_bottom_gap*3 -->
-    <dimen name="keyboardHeight_stone">22.30mm</dimen>
+    <integer name="max_more_suggestions_row">4</integer>
+    <dimen name="key_preview_backing_height">160dip</dimen>
 </resources>
