--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -18,42 +18,60 @@
 -->
 
 <device name="Android">
+  <!-- All values are in mAh except as noted -->
   <item name="none">0</item>
   <item name="screen.on">100</item>
-  <item name="bluetooth.active">142</item> <!-- In call -->
+  <item name="bluetooth.active">142</item>
   <item name="bluetooth.on">0.3</item>
-  <!-- CPU wakelock held for 830ms on bluetooth headset at command. 43mA * 830 -->
+  <!-- CPU wakelock held for 830ms on bluetooth headset at command.
+       43mA * 830 -->
   <item name="bluetooth.at">35690</item>
   <item name="screen.full">160</item>
   <item name="wifi.on">4</item>
   <item name="wifi.active">120</item>
   <item name="wifi.scan">220</item>
-  <item name="dsp.audio">88</item>
-  <item name="dsp.video">88</item>
+  <item name="dsp.audio">106</item> <!-- Estimated -->
+  <item name="dsp.video">106</item> <!-- Estimated -->
   <item name="radio.active">300</item>
-  <item name="gps.on">170</item>
+  <!-- The current consumed by the radio when it is scanning for a signal -->
   <item name="radio.scanning">70</item>
+  <item name="gps.on">170</item>
+  <!-- Current consumed by the radio at different signal strengths, when paging -->
   <array name="radio.on"> <!-- Strength 0 to BINS-1 -->
       <value>3</value>
       <value>3</value>
   </array>
+  <!-- Different CPU speeds as reported in
+       /sys/devices/system/cpu/cpu0/cpufreq/stats/time_in_state -->
   <array name="cpu.speeds">
-      <value>19200</value>
+      <value>120000</value>
       <value>122880</value>
-      <value>128000</value>
+      <value>200000</value>
       <value>245760</value>
+      <value>320000</value>
+      <value>400000</value>
       <value>480000</value>
       <value>600000</value>
+      <value>768000</value>
+      <value>787200</value>
+      <value>806400</value>
   </array>
-  <!-- Power consumption in suspend -->
-  <item name="cpu.idle">1.7</item>
+  <!-- Power consumption when CPU is idle -->
+  <item name="cpu.idle">3.0</item>
   <!-- Power consumption at different speeds -->
-      <array name="cpu.active">
-      <value>0</value>
-      <value>0</value>
-      <value>0</value>
-      <value>45</value>
-      <value>100</value>
-      <value>140</value>
+  <array name="cpu.active"> <!-- Estimated -->
+      <value>30</value>  <!-- 120000 -->
+      <value>32</value>  <!-- 122880 -->
+      <value>45</value>  <!-- 200000 -->
+      <value>60</value>  <!-- 245760 -->
+      <value>74</value>  <!-- 320000 -->
+      <value>88</value>  <!-- 400000 -->
+      <value>100</value> <!-- 480000 -->
+      <value>120</value> <!-- 600000 -->
+      <value>160</value> <!-- 768000 -->
+      <value>170</value> <!-- 787200 -->
+      <value>180</value> <!-- 806400 -->
   </array>
+  <!-- This is the battery capacity in mAh -->
+  <item name="battery.capacity">1230</item>
 </device>
