--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -171,6 +171,9 @@
         <item>"bnep\\d"</item>
     </string-array>
 
+    <!-- Boolean indicating whether Softap require reloading AP firware -->
+    <bool name="config_wifi_ap_firmware_reload">false</bool>
+
     <!-- Array of ConnectivityManager.TYPE_xxxx values allowable for tethering -->
     <!-- Common options are [1, 4] for TYPE_WIFI and TYPE_MOBILE_DUN or
     <!== [0,1,5,7] for TYPE_MOBILE, TYPE_WIFI, TYPE_MOBILE_HIPRI and TYPE_BLUETOOTH -->
